fixed alignment in chat

--- a/srcs/requirements/front/src/components/Profil/Profil.scss
+++ b/srcs/requirements/front/src/components/Profil/Profil.scss
@@ -21,7 +21,7 @@ $user-height: 25%;
 	}
 }
 
-.user-frame {
+.user-profil-frame {
 	flex-direction: row;
 	height: $user-height;
 
